# bot_maid_v3

./: .gitignore  Cargo.toml  shell.nix
src/: main.rs
